[gd_scene load_steps=34 format=3 uid="uid://chsygkqrgds05"]

[ext_resource type="Script" uid="uid://dxv8nsgskqsad" path="res://endscreen.gd" id="1_4dbv0"]
[ext_resource type="Shader" uid="uid://bkkxl0dt5qtd5" path="res://scenes/opaque_static.gdshader" id="2_7p0wy"]
[ext_resource type="Texture2D" uid="uid://v0gd0xyoqygh" path="res://assets/camera/static.png" id="3_nlnny"]
[ext_resource type="Shader" uid="uid://b1qf6jo0e3ka8" path="res://scenes/bars.gdshader" id="4_nwh0b"]
[ext_resource type="Texture2D" uid="uid://dms4asa20bkw5" path="res://assets/camera/bars.png" id="5_gnegq"]
[ext_resource type="Texture2D" uid="uid://qvnsjq1jmtb3" path="res://assets/extras/bonnie.png" id="6_26ye5"]
[ext_resource type="Texture2D" uid="uid://bhnoifx6fbgpo" path="res://assets/extras/chica.png" id="7_mwp55"]
[ext_resource type="Texture2D" uid="uid://doecodglwiqsu" path="res://assets/extras/foxy.png" id="8_xegbw"]
[ext_resource type="Texture2D" uid="uid://caolmhluesh0o" path="res://assets/extras/fredbear.png" id="9_oxfni"]
[ext_resource type="Texture2D" uid="uid://dd8rg7pbfn1ak" path="res://assets/extras/freddy.png" id="10_mnle7"]
[ext_resource type="Texture2D" uid="uid://2km443cwwtmc" path="res://assets/extras/staticguy.png" id="11_q35jl"]
[ext_resource type="Texture2D" uid="uid://b76spj3iixf0a" path="res://assets/extras/phoneguy.png" id="11_u3j0k"]
[ext_resource type="Texture2D" uid="uid://cww561pnexdvu" path="res://assets/extras/springtrap.png" id="12_k2t4c"]
[ext_resource type="FontFile" uid="uid://brvcb4id55tyf" path="res://assets/fonts/PressStart2P-vaV7.ttf" id="12_rqine"]
[ext_resource type="AudioStream" uid="uid://dnj2md3nyu3jo" path="res://assets/sounds/night 7 complete.wav" id="13_u62el"]
[ext_resource type="AudioStream" uid="uid://b6g5mqxx3nwd0" path="res://assets/sounds/lose.wav" id="14_mke4t"]
[ext_resource type="Script" uid="uid://78gg5ejua4uw" path="res://scenes/Unpauser.gd" id="14_u6m2g"]
[ext_resource type="AudioStream" uid="uid://jewr4kyfbenj" path="res://assets/sounds/static.wav" id="16_mqwed"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf6kp"]
shader = ExtResource("2_7p0wy")
shader_parameter/scroll = 0.0
shader_parameter/opacity = 1.0
shader_parameter/displacement_scale = 2.0
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_doekc"]
shader = ExtResource("4_nwh0b")
shader_parameter/motion = Vector2(0, -5)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylel7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_26ye5")
}],
"loop": false,
"name": &"bonnie",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_mwp55")
}],
"loop": false,
"name": &"chica",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_xegbw")
}],
"loop": false,
"name": &"foxy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_oxfni")
}],
"loop": false,
"name": &"fredbear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_mnle7")
}],
"loop": false,
"name": &"freddy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_u3j0k")
}],
"loop": false,
"name": &"phone_guy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_k2t4c")
}],
"loop": false,
"name": &"springtrap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_q35jl")
}],
"loop": true,
"name": &"static_guy",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x0x7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3wj8"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eijya"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_oev8n"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("12_rqine")
Label/styles/normal = SubResource("StyleBoxEmpty_x0x7x")
ProgressBar/styles/background = SubResource("StyleBoxFlat_j3wj8")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_eijya")

[sub_resource type="Gradient" id="Gradient_3okk4"]
offsets = PackedFloat32Array(0.512987, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u6pag"]
gradient = SubResource("Gradient_3okk4")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g6dj"]
bg_color = Color(0.408329, 0.408329, 0.408329, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyqfl"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7eh4f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bag67"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1pja"]
bg_color = Color(0.25, 0.25, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 4
anti_aliasing = false

[sub_resource type="Theme" id="Theme_51ho5"]
default_font = ExtResource("12_rqine")
default_font_size = 16
Button/fonts/font = ExtResource("12_rqine")
Button/styles/disabled = SubResource("StyleBoxFlat_7g6dj")
Button/styles/focus = SubResource("StyleBoxFlat_jyqfl")
Button/styles/hover = SubResource("StyleBoxFlat_7eh4f")
Button/styles/normal = SubResource("StyleBoxFlat_bag67")
Button/styles/pressed = SubResource("StyleBoxFlat_w1pja")

[node name="endscreen" type="Node2D"]
script = ExtResource("1_4dbv0")

[node name="OpaqueStatic" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_pf6kp")
scale = Vector2(5, 5)
texture = ExtResource("3_nlnny")
centered = false

[node name="Green" type="Polygon2D" parent="."]
color = Color(0.0588235, 0.219608, 0.0588235, 1)
polygon = PackedVector2Array(-48, -64, 1976, -48, 1976, 1128, -40, 1136)

[node name="Bars" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_doekc")
scale = Vector2(5, 5)
texture = ExtResource("5_gnegq")
centered = false

[node name="Character" type="AnimatedSprite2D" parent="."]
z_index = 4
texture_filter = 1
position = Vector2(-360, 544)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ylel7")
animation = &"bonnie"

[node name="TotalPower" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 640.0
offset_top = 648.0
offset_right = 960.0
offset_bottom = 756.0
scale = Vector2(2, 2)
theme = SubResource("Theme_oev8n")
text = "Total Power Used: 0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vignette" type="Sprite2D" parent="."]
process_mode = 1
z_index = 3
position = Vector2(0, -7.62939e-06)
scale = Vector2(30, 16.875)
texture = SubResource("GradientTexture2D_u6pag")
centered = false

[node name="Labels" type="Node2D" parent="."]
z_index = 3
position = Vector2(128, 32)

[node name="TitleLabel" type="Label" parent="Labels"]
texture_filter = 1
offset_left = 384.0
offset_right = 512.0
offset_bottom = 27.0
scale = Vector2(10, 10)
theme = SubResource("Theme_oev8n")
text = "YOU LOSE"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="Labels/TitleLabel"]
texture_filter = 1
layout_mode = 0
offset_top = 16.8
offset_right = 640.0
offset_bottom = 43.8
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_oev8n")
text = "(womp womp)"
horizontal_alignment = 1

[node name="SubTitlePreset" type="Label" parent="Labels/TitleLabel"]
texture_filter = 1
layout_mode = 0
offset_top = 22.4
offset_right = 640.0
offset_bottom = 49.4
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_oev8n")
horizontal_alignment = 1

[node name="LoseStats" type="Label" parent="Labels"]
texture_filter = 1
offset_left = 384.0
offset_top = 352.0
offset_right = 1024.0
offset_bottom = 480.0
scale = Vector2(2, 2)
theme = SubResource("Theme_oev8n")
text = "Time: 0:00
Total Power Used:   0%
Power Generated:   0%"
horizontal_alignment = 2
vertical_alignment = 3

[node name="WinStats" type="Label" parent="Labels"]
visible = false
texture_filter = 1
offset_top = 288.0
offset_right = 640.0
offset_bottom = 480.0
scale = Vector2(2, 2)
theme = SubResource("Theme_oev8n")
text = "Time:             0:00
Total Power Used: 0%
Power Generated:  0%
Total Score:      0
High Score:       0
"
vertical_alignment = 3

[node name="Achievements" type="Label" parent="Labels/WinStats"]
texture_filter = 1
layout_mode = 0
offset_top = 224.0
offset_right = 640.0
offset_bottom = 416.0
theme = SubResource("Theme_oev8n")
theme_override_constants/line_spacing = 8
text = "Achievements:     N/A"

[node name="WinSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_u62el")

[node name="LoseSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_mke4t")

[node name="Node2D" type="Node2D" parent="."]
z_index = 4

[node name="Continue" type="Button" parent="Node2D"]
texture_filter = 1
offset_left = 1616.0
offset_top = 1000.0
offset_right = 1760.0
offset_bottom = 1032.0
scale = Vector2(2, 2)
focus_mode = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_51ho5")
theme_override_font_sizes/font_size = 16
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "CONTINUE"

[node name="Black" type="CanvasModulate" parent="."]
z_index = 4096

[node name="Unpauser" type="Node" parent="."]
process_mode = 3
script = ExtResource("14_u6m2g")

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_mqwed")
autoplay = true

[connection signal="pressed" from="Node2D/Continue" to="." method="_on_continue_pressed"]
